--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.71.1",
     "react-resizable-panels": "^4.4.1",
+    "react-syntax-highlighter": "^16.1.0",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
